# Molly

./: .gitignore  2026-05-26-ai4s-agent-b1-design.md  2026-05-26-ai4s-agent-b1-implementation-plan.md  CLAUDE.md  MEMORY.md  README.md  USER.md  pyproject.toml  to do list.md  todo.md
docs/: agent-tool-registry.md  architecture-b1.md  contextual-alias-resolution.md  corpus-evaluation-and-reproducibility-audit.md  critic-agent.md  custom-corpus-admission-package-binding.md  custom-corpus-dataset-admission-gate.md  custom-corpus-dataset-materialization-boundary.md  custom-corpus-dry-run.md  custom-corpus-governance-runbook.md  custom-corpus-governance-stage-summary-20260628.md  custom-corpus-human-review.md  custom-corpus-intake-contract.md  custom-corpus-materialization-planner.md  custom-corpus-materialization-schema.md  custom-corpus-property-admission-draft-builder.md  custom-corpus-property-admission-draft-package-precheck.md  custom-corpus-property-admission-readiness.md  custom-corpus-property-admission-request-planner.md  custom-corpus-property-candidate-planner.md  custom-corpus-property-candidate-review-queue.md  custom-corpus-property-candidate-schema.md  custom-corpus-property-materialization-dry-run.md  custom-corpus-property-materialization-plan-draft.md  custom-corpus-property-materialization-plan-preflight.md  custom-corpus-property-materialization-planner-runner.md  custom-corpus-property-materializer-execution-preflight.md  custom-corpus-property-materializer-execution-request.md  custom-corpus-property-package-binding.md  (+190 more)
scripts/: clean_dataset.py  (+2 more)
(+981 files in other folders)
