[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4s-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0",
  "httpx>=0.27",
  "pillow>=10.0",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pdfplumber>=0.11",
  "pytest>=8.0",
  "rdkit>=2023.9.1",
  "reportlab>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
